# tepl

./: AUTHORS  HACKING  Makefile.am  NEWS  README  README.md  amtk.pc.in  configure.ac  gtef.doap  gtef.pc.in  meson.build  meson_options.txt  tepl.doap  tepl.pc.in
amtk/: Makefile.am  amtk-action-info-central-store.c  amtk-action-info-central-store.h  amtk-action-info-store.c  amtk-action-info-store.h  amtk-action-info.c  amtk-action-info.h  amtk-action-map.c  amtk-action-map.h  amtk-application-window.c  amtk-application-window.h  amtk-factory-menu.c  amtk-factory-menu.h  amtk-factory.c  amtk-factory.h  amtk-menu-factory.c  amtk-menu-factory.h  amtk-menu-item.c  amtk-menu-item.h  amtk-menu-shell.c  amtk-menu-shell.h  amtk-types.h  amtk-utils.c  amtk-utils.h  amtk.h  tepl-action-info-central-store.c  tepl-menu-item.h  tepl-menu-shell.h  tepl-types.h  tepl.h
docs/: HACKING.md  more-information.md  roadmap-done.md  roadmap.md
docs/reference/: Makefile.am  amtk-intro.xml  amtk-intro.xml.in  api-breaks.xml  gtef-1.0-sections.txt  gtef-2.0-sections.txt  gtef-docs.xml.in  gtef-sections.txt.in  intro.xml  intro.xml.in  meson.build  porting-guides.xml  tepl-3.0-sections.txt  tepl-4.0-sections.txt  tepl-docs.xml  tepl-docs.xml.in  tepl-sections.txt
docs/reference/xml/: meson.build
gtef/: Makefile.am  gtef-action-info-central-store.c  gtef-action-info-central-store.h  gtef-action-info-store.c  gtef-action-info-store.h  gtef-action-info.c  gtef-action-info.h  gtef-action-map.c  gtef-action-map.h  gtef-application-window.c  gtef-application-window.h  gtef-application.c  gtef-application.h  gtef-buffer-input-stream.c  gtef-buffer-input-stream.h  gtef-buffer.c  gtef-buffer.h  gtef-encoding-converter.c  gtef-encoding-converter.h  gtef-encoding-private.h  gtef-encoding.c  gtef-encoding.h  gtef-enum-types.c.template  gtef-enum-types.h.template  gtef-file-content-loader.c  gtef-file-content-loader.h  gtef-file-loader.c  gtef-file-loader.h  gtef-file-metadata.c  gtef-file-metadata.h  gtef-file-saver.c  gtef-file-saver.h  gtef-file.c  gtef-file.h  gtef-fold-region.c  gtef-fold-region.h  gtef-gutter-renderer-folds.c  gtef-gutter-renderer-folds.h  gtef-info-bar.c  gtef-info-bar.h  (+23 more)
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fr.po  fur.po  hr.po  hu.po  id.po  ja.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
tepl/: Makefile.am  meson.build  symbol.map  tepl-abstract-factory-vala.c  tepl-abstract-factory-vala.h  tepl-abstract-factory.c  tepl-abstract-factory.h  tepl-action-info-store.h  tepl-action-map.h  tepl-application-window-actions.c  tepl-application-window-actions.h  tepl-application-window.c  tepl-application-window.h  tepl-application.c  tepl-application.h  tepl-buffer-input-stream.c  tepl-buffer-input-stream.h  tepl-buffer.c  tepl-buffer.h  tepl-charset-converter-output-chunk.c  tepl-charset-converter-output-chunk.h  tepl-charset-converter.c  tepl-charset-converter.h  tepl-close-confirm-dialog-single.c  tepl-close-confirm-dialog-single.h  tepl-encoding-converter.c  tepl-encoding-converter.h  tepl-encoding-private.h  tepl-encoding.c  tepl-encoding.h  tepl-enum-types.c.template  tepl-enum-types.h.template  tepl-file-chooser.c  tepl-file-chooser.h  tepl-file-content-loader.c  tepl-file-content-loader.h  tepl-file-content.c  tepl-file-content.h  tepl-file-loader.c  tepl-file-loader.h  (+93 more)
tests/: Makefile.am  gtef-gutter-renderer-folds-sub.c  gtef-gutter-renderer-folds-sub.h  meson.build  tepl-gutter-renderer-folds-sub.c  tepl-gutter-renderer-folds-sub.h  test-fold-region.c  test-gutter-renderer-folds.c  test-highlight-mode-selector.c  test-language-chooser-dialog.c  test-language-chooser-widget.c  test-menu.c  test-space-drawer-prefs.c  test-tab.c
testsuite/: Makefile.am  meson.build  tepl-test-utils.c  tepl-test-utils.h  test-action-info-store.c  test-action-map.c  test-buffer-input-stream.c  test-encoding-converter.c  test-encoding.c  test-file-content.c  test-file-loader.c  test-file-metadata.c  test-file-saver.c  test-file.c  test-fold-region.c  test-icu.c  test-info-bar.c  test-metadata-manager.c  test-metadata-store.c  test-metadata.c  test-notebook.c  test-utils.c
testsuite/amtk/: test-action-info-store.c  test-utils.c
testsuite/test-metadata-manager-data/: expected-to-fail-01.xml  expected-to-fail-04.xml  expected-to-fail-06.xml  expected-to-succeed-01-trim-after.xml  expected-to-succeed-01-trim-before.xml
testsuite/test-metadata-store/: document-with-no-entry.xml  empty-key.xml  expected-to-fail-02.xml  expected-to-fail-03.xml  expected-to-fail-05.xml  expected-to-fail-07-garbage.xml  from-old-metadata-manager.xml  gcsvedit-one-entry.xml  max-num-locations-after.xml  max-num-locations-before.xml  new-format-version.xml  one-entry-markup-escape.xml
tools/shared-mime-info-list-text-plain-globs/: .gitignore  compile.sh  globs-to-ignore  mime-type-is-text-plain.c  shared-mime-info-list-text-plain-globs.sh
